--- a/LogRedactorSharp.Core/LogRedactorSharp.Core.csproj
+++ b/LogRedactorSharp.Core/LogRedactorSharp.Core.csproj
@@ -24,4 +24,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+  </ItemGroup>
+
 </Project>
