--- a/LogRedactorSharp.Core.Tests/LogRedactorSharp.Core.Tests.csproj
+++ b/LogRedactorSharp.Core.Tests/LogRedactorSharp.Core.Tests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LogRedactorSharp.Core\LogRedactorSharp.Core.csproj" />
+  </ItemGroup>
+
 </Project>
